# polytopes_multirobot_planner

polytopes_centralized_planner/: CMakeLists.txt  package.xml
polytopes_centralized_planner/config/: parameters.yaml
polytopes_centralized_planner/include/polytopes_centralized_planner/: formation.h  polyhedron_container.h
polytopes_centralized_planner/include/polytopes_centralized_planner/optimization/: constraints_set.h  cost_term.h  formation_problem.h  variable_set.h
polytopes_centralized_planner/include/polytopes_centralized_planner/solvers/: polytopes_solver.hpp
polytopes_centralized_planner/launch/: centralized_planner.launch.py
polytopes_centralized_planner/launch/test/: centralized_planner.launch.py  test_solver.launch.py
polytopes_centralized_planner/scripts/: simplify_map.py
polytopes_centralized_planner/src/: centralized_planner_node.cpp
polytopes_centralized_planner/src/polytopes_centralized_planner/: formation.cpp
polytopes_centralized_planner/src/polytopes_centralized_planner/optimization/: formation_problem.cpp
polytopes_centralized_planner/src/polytopes_centralized_planner/solvers/: polytopes_solver.cpp
polytopes_centralized_planner/src/test/optimization/: config.yaml  obstacles.yaml  plot_area.py  test_formation_problem.cpp  test_nlp.cpp
polytopes_centralized_planner/src/test/solver/: test_solver.cpp
polytopes_centralized_planner_msgs/: CMakeLists.txt  package.xml
polytopes_centralized_planner_msgs/srv/: MapWithBoundingBoxes.srv
