<?xml version="1.0"?>
<package format="2">
  <name>polytopes_centralized_planner</name>
  <version>0.0.0</version>
  <description>The polytopes_centralized_planner package</description>

  <maintainer email="laplace@todo.todo">laplace</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <depend>rclpy</depend>
  
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>

  <depend>graph_core</depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Interface generation-->
  <depend>geometry_msgs</depend>
  <depend>polytopes_centralized_planner_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
